# zfs-snap-prune

./: .gitignore  COPYING  Cargo.toml  config.example.yaml  default.nix  flake.nix  module.nix
src/: main.rs
