[package]
name = "zfs-snap-prune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.3.3", features = ["derive"] }
config = "0.13.3"
libzetta = { git = "https://github.com/lschuermann/libzetta-rs", rev = "7f217850a12d44b4430055a2cda138ca970b53e8" }
log = "0.4.19"
regex = "1.8.4"
simple_logger = { version = "4.1.0", features = ["stderr"] }
